restrict API to signing officials only